--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,8 @@
 
 	<properties>
 		<java.version>1.8</java.version>
-		<spring-boot-admin.version>2.2.1</spring-boot-admin.version>
+		<spring-boot-admin.version>2.2.2</spring-boot-admin.version>
+		<spring-cloud-starter.version>2.2.2.RELEASE</spring-cloud-starter.version>
 	</properties>
 
 	<dependencies>
@@ -38,10 +39,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-		<!--<dependency>-->
-			<!--<groupId>io.micrometer</groupId>-->
-			<!--<artifactId>micrometer-registry-prometheus</artifactId>-->
-		<!--</dependency>-->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter</artifactId>
+			<version>${spring-cloud-starter.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
